# Tutorial_AwesomeModernCPP

./: .clang-format  .env.example  .gitignore  .gitmodules  .markdownlint.json  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.en.md  README.md  TODO_STAGE4.md  VITEPRESS_MIGRATION_HANDOFF.md  index.html  mkdocs.yml  package.json  pnpm-lock.yaml  robots.txt  sitemap.xml  tags.json
code/examples/chapter02/01_zero_overhead/: CMakeLists.txt  state_machine.cpp  strong_types.cpp
code/examples/chapter02/02_inline_optimization/: CMakeLists.txt  constexpr_vs_inline.cpp  inline_basics.cpp
code/examples/chapter02/04_crtp_polymorphism/: CMakeLists.txt  README.md  compile_time_polymorphism.cpp  crtp_example.cpp  variant_example.cpp
code/examples/chapter03/02_move_semantics/: CMakeLists.txt  README.md  move_semantics_example.cpp
code/examples/chapter05/01_dynamic_memory_problems/: CMakeLists.txt  alignment_demo.cpp  fragmentation_demo.cpp  memory_layout_demo.cpp
code/examples/chapter05/02_static_vs_stack_allocation/: CMakeLists.txt  README.md  ring_buffer_demo.cpp  stack_allocation_demo.cpp  static_allocation_demo.cpp
code/examples/chapter05/06_array_vs_stdarray/: CMakeLists.txt  README.md  basic_comparison.cpp  practical_examples.cpp
code/examples/chapter06/02_unique_ptr_zero_overhead/: CMakeLists.txt  README.md  custom_deleter.cpp  polymorphism.cpp
code/examples/chapter06/04_smart_ptr_tradeoffs/: CMakeLists.txt  README.md  comparison.cpp
code/examples/chapter06/07_reference_counting/: CMakeLists.txt  README.md  atomic_refcount.cpp  intrusive_refcount.cpp
code/examples/chapter06/08_scope_guard_patterns/: CMakeLists.txt  README.md  scope_guard.cpp
code/examples/chapter09/03_std_function_vs_pointers/: CMakeLists.txt  README.md  event_loop.cpp  function_pointer.cpp  performance_comparison.cpp  state_machine.cpp  std_function_demo.cpp  table_driven.cpp
code/examples/chapter09/05_std_invoke/: CMakeLists.txt  README.md  command_parser.cpp  invoke_result.cpp  universal_caller.cpp  wrapper.cpp
code/examples/chapter09/06_functional_error_handling/: CMakeLists.txt  README.md  basic_result.cpp  combinators.cpp  config_loader.cpp  peripheral_init.cpp  retry.cpp
code/examples/chapter09/08_ranges_pipes/: CMakeLists.txt  adc_pipeline.cpp  event_manager.cpp  pipeline_basics.cpp  ring_buffer_pipeline.cpp
code/examples/chapter10/05_interrupt_safe/: 01_isr_basics.cpp  CMakeLists.txt
code/examples/chapter11/02_structured_binding/: CMakeLists.txt  basic_structured_binding.cpp  sensor_data_parser.cpp  structured_binding_in_range_for.cpp
code/volumn_codes/vol1/c_tutorials/: CMakeLists.txt
code/volumn_codes/vol1/c_tutorials/01-program-structure/: CMakeLists.txt  ex2_printf_format.c
code/volumn_codes/vol1/c_tutorials/02A-data-types/: CMakeLists.txt  ex1_sizeof_detective.c  ex2_integer_overflow.c
code/volumn_codes/vol1/c_tutorials/02B-float-char/: CMakeLists.txt  ex1_float_epsilon.c  ex1_float_precision.c  ex2_implicit_conversion.c  ex3_const_count_char.c  ex3_count_char.c
code/volumn_codes/vol1/c_tutorials/03A-operators/: CMakeLists.txt  ex1_integer_division.c  ex2_find_first_above.c  (+1 more)
code/volumn_codes/vol1/ch00/: CMakeLists.txt  calc.cpp  hello_world.cpp  setup-linux.cpp  setup-windows.cpp
code/volumn_codes/vol1/ch01/: CMakeLists.txt  bool-arithmetic.cpp  builtin-type-sizes.cpp  celsius-to-fahrenheit.cpp  char-types.cpp  const-and-constexpr.cpp  conversion-overview.cpp  dangling-reference.cpp  explicit-cast.cpp  fixed-width-sizes.cpp  float-comparison.cpp  float-precision.cpp  implicit-conversion.cpp  integer-division.cpp  integer-type-sizes.cpp  lvalue-rvalue-demo.cpp  numeric-limits.cpp  pass-by-value-vs-ref.cpp
code/volumn_codes/vol1/ch02/: CMakeLists.txt  conditional.cpp  conditionals_basic.cpp  loops.cpp  multiplication_table.cpp  range_for.cpp  range_for_intro.cpp  while_sum.cpp
code/volumn_codes/vol1/ch03/: CMakeLists.txt  constexpr-basic.cpp  constexpr-crc8.cpp  dangling-reference.cpp  func-declare-define.cpp  func-multi-params.cpp  func-overview.cpp  func-params-args.cpp  func-scope.cpp  overload-ambiguity.cpp  overload-default-args.cpp  pass-by-compare.cpp  pass-by-ref-swap.cpp  pass-by-ref.cpp  pass-by-value.cpp
code/volumn_codes/vol1/ch04/: 01-address-demo.cpp  01-fix-pointer-bugs.cpp  01-pointer-types.cpp  01-track-pointers.cpp  02-array-decay.cpp  02-array-traversal.cpp  02-cstring-ops.cpp  02-pointer-step.cpp  02-ptr-arith-demo.cpp  03-find-ref-bugs.cpp  03-references-demo.cpp  04-raw-vs-smart.cpp  04-unique-ptr-demo.cpp  CMakeLists.txt
code/volumn_codes/vol1/ch05/: CMakeLists.txt  c-arrays-decay.cpp  c-arrays-demo.cpp  std-array-access.cpp  std-array-basics.cpp  std-array-ops.cpp  std-array-practice.cpp  std-array-value-semantics.cpp  string-construct.cpp  string-demo.cpp
code/volumn_codes/vol1/ch06/: CMakeLists.txt  cascading_demo.cpp  constructors.cpp  ctor_dtor_order.cpp  friend_demo.cpp  point.cpp  raii_demo.cpp  static_demo.cpp
code/volumn_codes/vol1/ch07/: 01-fraction.cpp  02-io-overload.cpp  03-callable.cpp  03-descending-order.cpp  CMakeLists.txt
code/volumn_codes/vol1/ch08/: 01-single-inheritance.cpp  02a-virtual-functions.cpp  02b-virtual-functions.cpp  03-abstract-classes.cpp  04-multiple-inheritance.cpp  05-oop-in-practice.cpp  CMakeLists.txt
code/volumn_codes/vol1/ch09/: 01-function-templates.cpp  01a-overload-resolution.cpp  02-class-template-stack.cpp  02-stack.hpp  03-template-specialization.cpp  CMakeLists.txt
code/volumn_codes/vol1/ch10/: CMakeLists.txt  basic_throw_catch.cpp  error_cmp.cpp  exception_hierarchy.cpp  exceptions.cpp  rethrow.cpp  safety.cpp  stack_unwinding.cpp
scripts/: analyze_frontmatter.py  build.ts  build_examples.py  check_links.py  check_nav_reachability.py  check_quality.py  cppref_card_generator.py  cppref_crawler.py  cppref_manifest.json  extract_code.py  generate_docs.py  local_preview.sh  migrate_tags.py  mkdoc_setup_local_dependency.sh  mkdocs_dev.sh  pyproject.toml  remove_manual_nav.py  setup_precommit.sh  translate.py  validate_frontmatter.py
(+3140 files in other folders)
