cmake_minimum_required(VERSION 3.15)
project(chapter09_std_invoke CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(invoke_basics invoke_basics.cpp)
add_executable(universal_caller universal_caller.cpp)
add_executable(wrapper wrapper.cpp)
add_executable(command_parser command_parser.cpp)
add_executable(invoke_result invoke_result.cpp)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(invoke_basics PRIVATE -Wall -Wextra -Werror)
    target_compile_options(universal_caller PRIVATE -Wall -Wextra -Werror)
    target_compile_options(wrapper PRIVATE -Wall -Wextra -Werror)
    target_compile_options(command_parser PRIVATE -Wall -Wextra -Werror)
    target_compile_options(invoke_result PRIVATE -Wall -Wextra -Werror)
endif()
