cmake_minimum_required(VERSION 3.15)
project(chapter09_ranges_pipes CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_executable(pipeline_basics pipeline_basics.cpp)
add_executable(adc_pipeline adc_pipeline.cpp)
add_executable(protocol_parser protocol_parser.cpp)
add_executable(event_manager event_manager.cpp)
add_executable(ring_buffer_pipeline ring_buffer_pipeline.cpp)
add_executable(performance_compare performance_compare.cpp)

if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    target_compile_options(pipeline_basics PRIVATE -Wall -Wextra -Werror -O2)
    target_compile_options(adc_pipeline PRIVATE -Wall -Wextra -Werror)
    target_compile_options(protocol_parser PRIVATE -Wall -Wextra -Werror)
    target_compile_options(event_manager PRIVATE -Wall -Wextra -Werror)
    target_compile_options(ring_buffer_pipeline PRIVATE -Wall -Wextra -Werror)
    target_compile_options(performance_compare PRIVATE -Wall -Wextra -Werror -O2)
endif()
