cmake_minimum_required(VERSION 3.20)
project(c_tutorials C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_C_EXTENSIONS OFF)

add_compile_options(-Wall -Wextra)

add_subdirectory(01-program-structure)
add_subdirectory(02A-data-types)
add_subdirectory(02B-float-char)
add_subdirectory(03A-operators)
add_subdirectory(03B-bitwise)
add_subdirectory(04-control-flow)
add_subdirectory(05-function)
add_subdirectory(06-scope)
add_subdirectory(07A-pointer)
add_subdirectory(07B-pointers-arrays)
add_subdirectory(08A-multi-level)
add_subdirectory(08B-restrict)
add_subdirectory(09-func-ptr)
add_subdirectory(10-arrays)
add_subdirectory(11-strings)
add_subdirectory(12-struct)
add_subdirectory(13-union-enum)
add_subdirectory(14-dynamic-mem)
add_subdirectory(15-preprocessor)
add_subdirectory(16-file-io)
