cmake_minimum_required(VERSION 3.20)
project(Vol1Ch03 VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(func-declare-define func-declare-define.cpp)
add_executable(func-params-args func-params-args.cpp)
add_executable(func-multi-params func-multi-params.cpp)
add_executable(func-scope func-scope.cpp)
add_executable(func-overview func-overview.cpp)
add_executable(pass-by-value pass-by-value.cpp)
add_executable(pass-by-ref pass-by-ref.cpp)
add_executable(pass-by-ref-swap pass-by-ref-swap.cpp)
add_executable(pass-by-compare pass-by-compare.cpp)
add_executable(dangling-reference dangling-reference.cpp)
add_executable(overload-default-args overload-default-args.cpp)
add_executable(overload-ambiguity overload-ambiguity.cpp)
add_executable(constexpr-basic constexpr-basic.cpp)
add_executable(constexpr-crc8 constexpr-crc8.cpp)
