cmake_minimum_required(VERSION 3.20)
project(Vol1Ch07 VERSION 0.0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(01-fraction 01-fraction.cpp)
add_executable(02-io-overload 02-io-overload.cpp)
add_executable(03-callable 03-callable.cpp)
add_executable(03-descending-order 03-descending-order.cpp)
